objects/User_Role__c.object
<CustomObject>
    <fields>
        <fullName>CaseAccessForAccountOwner__c</fullName>
        <label>CaseAccessForAccountOwner</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactAccessForAccountOwner__c</fullName>
        <label>ContactAccessForAccountOwner</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForecastUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ForecastUserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Role1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MayForecastManagerShare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MayForecastManagerShare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityAccessForAccountOwner__c</fullName>
        <label>OpportunityAccessForAccountOwner</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentRoleId__c</fullName>
        <label>ParentRoleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PortalAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Role</relationshipLabel>
        <relationshipName>User_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalAccountOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PortalAccountOwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Role</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalRole__c</fullName>
        <label>PortalRole</label>
        <picklist>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalType__c</fullName>
        <label>PortalType</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RoleId__c</fullName>
        <description>used to store source UserRole Id</description>
        <label>RoleId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RollupDescription__c</fullName>
        <label>RollupDescription</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>User Role</label>
    <nameField>
        <label>User Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Role</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>